# univ_firstsempractise

./: CMakeLists.txt
DZ3/: DZ3.cpp
DZ4/: solution_2.cpp  solution_3.cpp  solution_4.cpp  solution_5.cpp  solution_6.cpp
DZ5/: solution_1.cpp  solution_2.cpp
