cmake_minimum_required(VERSION 3.27)
project(univ_prog_first_year)

set(CMAKE_CXX_STANDARD 20)

add_executable(univ_prog_first_year DZ3/DZ3.cpp
        DZ4/solution_2.cpp
        DZ4/solution_3.cpp
        DZ4/solution_5.cpp
        DZ4/solution_4.cpp
        DZ4/solution_6.cpp
        DZ5/solution_1.cpp
        DZ5/solution_2.cpp)
